--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.15",
     "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.3.0",
+    "@vercel/analytics": "^1.5.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "playroomkit": "^0.0.72",
